# QnA_RAG_Doc_Management

./: .env  .gitignore  README.md  app.py  hello.py  pyproject.toml  requirements.txt  setup.py
backend/: Dockerfile
backend/db_service/: database_manager.py
backend/db_service/sql/: create_table.py  create_table.sql  get_doc_list.sql
backend/db_service/vectordb/: base.py
backend/db_service/vectordb/embedding_service/: service.py
backend/document_process/: base.py  process_pdfdoc.py
backend/driver_services/: ingestion_service.py  list_available_doc.py  qa_service.py
backend/llm_service/: base.py
backend/llm_service/Ollama/: llm_processing.py
backend/testing/: test_database_manager.py  test_db.py  test_doc_processor.py  test_ingestion.py  test_llm.py
backend/utils/: custom_exceptions.py  logger.py  ranking.py  request_param_check.py
deployment/: docker_compose.yaml
ollama/: Dockerfile  pull-llama3.sh
prompts/: qa_prompt.json
